inspiration/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-inspiration
  namespace: inspiration
spec:
  selector:
    matchLabels:
      app: wordpress-inspiration
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress-inspiration
    spec:
      securityContext:
        fsGroup: 33
      containers:
        - name: wordpress
          image: wordpress:7.0
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wp-content
              mountPath: /var/www/html/wp-content
            - name: wp-config-extra
              mountPath: /var/www/html/wp-config-extra.php
              subPath: wp-config-extra.php
            - name: wp-config-extra
              mountPath: /usr/local/etc/php/conf.d/uploads.ini
              subPath: uploads.ini
      volumes:
        - name: wp-content
          persistentVolumeClaim:
            claimName: wp-content-pvc
        - name: wp-config-extra
          configMap:
            name: wp-config-extra
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-inspiration
  namespace: inspiration
spec:
  selector:
    app: wordpress-inspiration
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
