inspiration/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-inspiration-ingress
  namespace: inspiration
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - inspiration.prjv.nl
      secretName: wordpress-inspiration-tls
  rules:
    - host: inspiration.prjv.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-inspiration
                port:
                  number: 80
